force-app/main/default/objects/FEC_Block_Code_Matrix__c/FEC_Block_Code_Matrix__c.object-meta.xml
<CustomObject>
    <description>Object được tạo ra để lưu trữ dựa vào so sánh Block Code để thực hiện các bước xử lý tiếp theo</description>
    <label>Block Code Matrix</label>
    <nameField>
        <label>Block Code Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Block Code Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>