force-app/main/default/objects/FEC_Block_Code_Matrix__c/fields/FEC_Action__c.field-meta.xml
<CustomField>
    <fullName>FEC_Action__c</fullName>
    <description>Trường thông tin xác định tính hợp lệ và đơn vị xử lý( Frontline hoặc D2C) dựa vào so sánh Block Code</description>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>