force-app/main/default/objects/FEC_Block_Code_Matrix__c/fields/FEC_Current_Block_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Block_Code__c</fullName>
    <description>Trường thông tin lưu trữ Block Code  thể hiện tình trạng khoá thẻ hiện tại của khách hàng</description>
    <label>Current Block Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>