force-app/main/default/objects/FEC_Block_Code_Matrix__c/fields/FEC_New_Block_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_New_Block_Code__c</fullName>
    <description>Trường thông tin hiển thị Block Code ứng với lý do khách hàng muốn khoá thẻ</description>
    <label>New Block Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>